--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 
 build
+node_modules
 
 # Created by https://www.gitignore.io/api/osx,node,linux,windows,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=osx,node,linux,windows,visualstudiocode
