--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,6 @@ jobs:
         npm run build-html
         npm run build-pdf
         
-    # Runs a single command using the runners shell
-    - name: Additional initialization
-      run: echo TODO: Push assets to website
+#     # Runs a single command using the runners shell
+#     - name: Additional initialization
+#       run: echo 'TODO: Push assets to website'
