--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,8 @@ jobs:
         
     - name: Copy resume files into website repo
       run: |
+        cd $GITHUB_WORKSPACE
+        ls -la
         cp $GITHUB_WORKSPACE/build/resume.pdf website/resume.pdf
         cp $GITHUB_WORKSPACE/build/resume.html website/resume/index.html
                 
