--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.TOKEN }}
-        repository: colejd/colejd.github.io
+        repository: colejd.github.io
 
 #     # Runs a single command using the runners shell
 #     - name: Additional initialization
