--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,7 +65,7 @@ jobs:
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
-        github_token: ${{ GITHUB_TOKEN }}
+        github_token: $GITHUB_TOKEN
         repository: colejd/colejd.github.io
 
 #     # Runs a single command using the runners shell
