--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,8 @@ jobs:
         
     - name: Commit files
       run: |
+        git config --local user.email "actions@github.com"
+        git config --local user.name "GitHub Actions"
         git commit -m "Update auto-generated resume files" -a
         git push
                 
