--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,7 @@ jobs:
         
     - name: Commit files
       run: |
+        cd $GITHUB_WORKSPACE/website
         git config --local user.email "actions@github.com"
         git config --local user.name "GitHub Actions"
         git add .
