Improve pdf generation

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "//develop": "Build and serve html version, rebuild upon changes",
     "develop": "run-p _watch:json _watch:html",
     "//Note_Private": "Private commands follow ===========================================================",
-    "_puppeteer": "puppeteer --margin-top 0 --margin-right 0 --margin-bottom 0 --margin-left 0 --format Letter print $npm_package_resume_output_directory/resume.html $npm_package_resume_output_directory/resume.pdf",
+    "_puppeteer": "node buildpdf.js",
+    "_puppeteer2": "puppeteer --margin-top 0 --margin-right 0 --margin-bottom 0 --margin-left 0 --format Letter print $npm_package_resume_output_directory/resume.html $npm_package_resume_output_directory/resume.pdf",
     "//_watch:json": "Watch json and build html if it changes",
     "_watch:json": "npm-watch build-html",
     "//_watch:html": "Watch html and preview in browser",
