--- a/package.json
+++ b/package.json
@@ -25,20 +25,18 @@
   "resume_output_directory": "build/",
   "theme": "themes/jsonresume-theme-stackoverflow",
   "scripts": {
-    "//Note_Public": "Public commands follow =============================================================",
+    "// Note_Public": "Public commands follow =============================================================",
     "initialize": "cd $npm_package_theme; npm install",
     "test": "$npm_package_hackmyresume_alias validate $npm_package_resume_file",
-    "build-all": "$npm_package_hackmyresume_alias build $npm_package_resume_file TO $npm_package_resume_output_directory/resume.all -t $npm_package_theme -o options.json",
+    "build-html": "$npm_package_hackmyresume_alias build $npm_package_resume_file TO $npm_package_resume_output_directory/resume.html -t $npm_package_theme",
     "build-pdf": "run-s build-html _puppeteer",
-    "build-html": "$npm_package_hackmyresume_alias build $npm_package_resume_file TO $npm_package_resume_output_directory/resume.html -t $npm_package_theme -o options.json",
-    "//develop": "Build and serve html version, rebuild upon changes",
+    "// About develop": "Build and serve html version, rebuild upon changes",
     "develop": "run-p _watch:json _watch:html",
-    "//Note_Private": "Private commands follow ===========================================================",
+    "// Note_Private": "Private commands follow ===========================================================",
     "_puppeteer": "node buildpdf.js",
-    "_puppeteer2": "puppeteer --margin-top 0 --margin-right 0 --margin-bottom 0 --margin-left 0 --format Letter print $npm_package_resume_output_directory/resume.html $npm_package_resume_output_directory/resume.pdf",
-    "//_watch:json": "Watch json and build html if it changes",
+    "// About _watch:json": "Watch json and build html if it changes",
     "_watch:json": "npm-watch build-html",
-    "//_watch:html": "Watch html and preview in browser",
+    "// About _watch:html": "Watch html and preview in browser",
     "_watch:html": "browser-sync start --watch --server --files ./build --index ./build/resume.html --no-notify"
   },
   "repository": {
